--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/NetNada_logo_icon.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="src/assets/NetNada_logo_icon.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EcoNet by NetNada</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/pages/main.jsx"></script>
+    <script type="module" src="main.jsx"></script>
   </body>
 </html>
